tests rapides sur Card et BuildingCard

--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>7wonders</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 </project>
