--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
             <artifactId>slf4j-simple</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <dependency>
+    		<groupId>org.skyscreamer</groupId>
+    		<artifactId>jsonassert</artifactId>
+    		<version>1.5.0</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 
 </project>
